# miht

./: .gitignore  .gitmodules  .lvimrc  CMakeLists.txt  README.md
bench/: cpu.sh  def_route.sh  def_route_mic.sh  mic.sh
data/: README.md  as4637_prefixes.txt
docs/bench-results/: cpu_lookup.csv  lookup.ods  mic_lookup.csv
src/: CMakeLists.txt  config.h  ip.c  ip.h  main.c  miht.c  miht.h  prettyprint.c  prettyprint.h  uint128.h
test/: CMakeLists.txt  main.c
